# hc-mdt-report-generator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Makefile  README.md  docker-compose.yml  drone.yml  environment.template  generate_env.sh  gr_entities_definition.json  package-lock.json  requirements-local.txt  requirements.txt
backend/: main.py  pyproject.toml  requirements.txt
backend/api/schemas/: response_schemas.py  unprocessed_document_schemas.py
backend/config/: bedrock_config.py  database.py  entity_config.py  ner_config.py  settings.py
backend/controllers/: entity_config_controller.py  evaluate_controller.py  ground_truth_controller.py  observability_controller.py  report_controller.py  security_controller.py  settings_controller.py  unprocessed_document_controller.py
backend/document_extraction/: deterministic_entity_extraction.py
backend/document_parser/: __init__.py  universal_document_parser.py
backend/domain/entities/: evaluation.py  generation.py  (+5 more)
backend/entity_extraction/: ner_classifier.py
backend/integration/: simplified_flow_a.py
backend/models/: report.py
backend/repositories/: evaluation_repository.py  generation_repository.py  ground_truth_repository.py  patient_document_repository.py  report_repository.py  unprocessed_document_repository.py  user_repository.py
backend/services/: document_categorization_service.py  document_chunking_service.py  document_data_extraction_service.py  encryption_service.py  entity_extraction_service.py  evaluation_service.py  gt_entity_extraction_service.py  gt_ocr_service.py  mdt_report_generator.py  ner_workflow_orchestrator.py  patient_document_service.py  patient_id_extraction_service.py  report_service.py  section_summary_service.py  unprocessed_document_service.py
backend/utils/: file_type_detector.py  progress_tracker.py  xml_cleaner.py
(+234 files in other folders)
